add some sample output, no commentary yet

--- a/paper/natepaper.tex
+++ b/paper/natepaper.tex
@@ -458,11 +458,78 @@ At publication, the following rules are implemented:
 
 \section{Results}
 \subsection{Selected Outputs}
+\subsubsection{Couplet}
+\begin{verbatim}
+"You havent seen him, have you? 
+"People seldom do.
+\end{verbatim}
+
+\begin{verbatim}
+The mate was making an out-of-town call!
+"If you dont look out your horse may fall."
+\end{verbatim}
+
+\begin{verbatim}
+"Will I?" answered the small youth.
+He guessed a great deal of the truth.
+\end{verbatim}
+
+\begin{verbatim}
+I wasnt used to them in those days.
+They produced death in about two days.
+\end{verbatim}
 \subsubsection{Haiku}
+\begin{verbatim}
+Harrys son nodded.
+Three columns and two arches.
+GLORY MAY NOT LAST.
+\end{verbatim}
+
+\begin{verbatim}
+A murderer?
+Last quarter only.
+Of what had he died?...
+\end{verbatim}
+
+\begin{verbatim}
+Alexander said. 
+"Boys, whose animal is this?" 
+A Crazy Mans Doings.
+\end{verbatim}
+
+\begin{verbatim}
+"Back to your airboat. 
+"How do you know this?" 
+"Why should I?
+\end{verbatim}
 \subsubsection{Sonnet}
 \subsubsection{Limerick}
 \subsubsection{Sestina}
 \subsubsection{Miscellaneous}
+\begin{verbatim}
+The first official report sent by Governor Francisco de Sande
+    to the home government is dated June 7, 1576.
+What troops can be away out here?"
+War had brought about a great many changes.
+\end{verbatim}
+
+\begin{verbatim}
+Although the cargo was taken out, it was after it 
+    had been in the water more than one and one-half months.
+Updated editions will replace the previous one--
+    the old editions will be renamed.
+The soldiers were ordered not to allow him to place on the 
+    vessel either bed, food, or drink.
+\end{verbatim}
+
+\begin{verbatim}
+"Was it a man?" asked Frank.
+The proprietor fainted and didnt get over it for two months."
+They have their own officers and workmen, and are 
+    placed in charge of the royal officials.
+Ah!
+\end{verbatim}
+
 \subsection{Defense of Technique}
 
 \subsubsection{Semantic Consistency}
@@ -517,7 +584,10 @@ survived the profiling process (like newlines).
 The interestingness of this approach's output depends largely on its corpus. Some areas which would prove fruitful would be:
 \onehalfspacing
 \begin{enumerate}
-\item Specific selections of multiple poets
+\item Specific selections of multiple poets (a `mix' of Charles Baudelaire and Robert Frost, for example)
+\item Newspaper articles from sources with vastly different political agendas
+\item Status updates from a specific social network
+\doublespacing
 \end{enumerate}
 \doublespacing
 
